Increase about section max-height to prevent clipping on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -635,7 +635,7 @@ main {
 }
 
 .about[aria-hidden="false"] {
-  max-height: 32rem;
+  max-height: 60rem;
   opacity: 1;
 }
 
